--- a/Practica1/Practica1.vcxproj
+++ b/Practica1/Practica1.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{59BAE409-53BB-47E8-BEAA-F817EBF35459}</ProjectGuid>
     <Keyword>Qt4VSv1.0</Keyword>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>EjemploMenus</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
